# hgreet

./: CHANGELOG.md  ChangeLog.md  GDHAPPI.cabal  LICENSE  README.md  cabal.project  hagreety.cabal  hgreet.cabal  package.yaml
app/: Main.hs
hgreet/: README.md  hgreet.cabal
hgreet-example/: LICENSE  README.md  hgreet-example.cabal
hgreet-example/src/: Main.hs
hgreet/src/: HGreet.hs
hgreet/src/HGreet/: Client.hs  Packet.hs
src/: HGreet.hs  IPCClient.hs  IPCPacket.hs  Main.hs
src/HGreet/: Client.hs  Packet.hs
