cabal-version:      2.4
name:               hagreety
version:            0.1.0.0
synopsis:           A simple example greeter made with hgreet based of agreety / agetty.
description:
    This is only an example, hagreety is not a good greeter, in fact it's almost certainly buggy.
    It is only meant to show you the basics of how to implement your own greeter in haskell using the "hgreet" package.
license:            GPL-3.0-or-later
author:             Vawlpe
maintainer:         vawlpe@gmail.com
copyright:          Copyright (C) 2022 Hazel (Vawlpe)
category:           System
license-file:       LICENSE
homepage:           https://github.com/Vawlpe/hagreety
bug-reports:        https://github.com/Vawlpe/hagreety/issue
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type: git
    location: https://github.com/Vawlpe/hagreety.git

executable hagreety
    main-is:          Main.hs
    hs-source-dirs:    src
    build-depends:
        , base >= 4.10 && < 5
        , hgreet
        , network
    default-language: Haskell2010
