cabal-version:      2.4
name:               hgreet-example
version:            0.1.0.0
synopsis:           A simple example greeter made with hgreet based of agreety / agetty.
description:
    This is only an example greeter to show you the general steps involved with creating a working greeter using @hgreet@ and @greetd@
    Please do NOT use this as your default systemwide greeter, I cannot guarantee the security or reliability of this example.
author:             Vawlpe
maintainer:         vawlpe@gmail.com
copyright:          Copyright (C) 2022 Hazel (Vawlpe)
category:           System
license:            GPL-3.0-or-later
license-file:       LICENSE
homepage:           https://github.com/Vawlpe/hgreet
bug-reports:        https://github.com/Vawlpe/hgreet/issue
extra-source-files:
    README.md

executable example
    main-is:          Main.hs
    hs-source-dirs:    src
    build-depends:
        , base
        , hgreet == 0.1.0.0
        , network
    default-language: Haskell2010

source-repository head
    type: git
    location: https://github.com/Vawlpe/hgreet.git
